fixtures/errors/for_of_non_iterable.js
for (let x of 1) {
  console.log(x);
}
